--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Para todas as fomes - meat</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#f97316" />
+    <meta name="theme-color" content="#3b71ca" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
